# Orpheus

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fastmcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml
data/fingerprints/: classical.json
data/instructions/: 00_core.md
docs/: architecture.md  dev-log.md  frontier-analysis.md  installation.md  roadmap.md
docs/plans/: 2026-07-18-compose-core.md  2026-07-18-songwriting-system.md
docs/specs/: 2026-07-18-compose-core-design.md  2026-07-18-songwriting-system-design.md  2026-07-22-reference-analysis-design.md
examples/: make_a_lofi_beat.md  make_it_classical.md
scripts/: run_lua_tests.py
src/orpheus_mcp/: __init__.py  drumkit.py  install.py  instruments.py  models.py  registry.py  server.py  soundpack.py
src/orpheus_mcp/analysis/: __init__.py  audio.py  fingerprint.py  match.py  symbolic.py
src/orpheus_mcp/bridge/: __init__.py  client.py
src/orpheus_mcp/bridge/lua/: orpheus_bridge.lua
src/orpheus_mcp/theory/: __init__.py  chords.py  genre_profiles.py  melody.py  music_theory_data.py  patterns.py
src/orpheus_mcp/tools/: __init__.py  analyze.py  apply.py  arrange.py  bridge_status.py  compose.py  dsl.py  instruments.py  midi.py  mix.py  project.py  render.py  style.py  theory.py  tracks.py  transport.py
tests/: fake_reaper.py  test_arrange.py  test_audio.py  test_bridge_client.py  test_bridge_integration.py  test_chords.py  test_cli.py  test_compose.py  test_drumkit.py  test_fingerprint.py  test_install.py  test_instruments.py  test_instruments_tools.py  test_m1_tools.py  test_m2_tools.py  test_melody.py  test_midi_roundtrip.py  test_patterns.py  test_registry.py  test_soundpack.py  test_symbolic.py  test_theory.py  test_theory_tools.py
tests/lua/: run_bridge.lua  test_bridge.lua  test_m1_handlers.lua
