[project]
name = "orpheus-mcp"
version = "0.1.0.dev0"
description = "An MCP server that lets an AI agent analyze, explain, and reshape music inside the REAPER DAW."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mal0ss", email = "mal0ss.network@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "reaper", "daw", "music", "ai", "agent", "reascript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Artistic Software",
]

dependencies = [
    "fastmcp>=2.3",
    "pydantic>=2.7",
    "music21>=9.1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pyloudnorm>=0.1",
    "matchering>=2.0",
]

[project.optional-dependencies]
# Opt-in fidelity upgrades — the core pipeline runs without these (graceful degradation).
analysis = [
    "librosa>=0.10",     # spectral features, MFCC, chroma
]
transcribe = [
    "basic-pitch>=0.3",  # audio -> MIDI for building fingerprints from raw reference audio (v2)
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "lupa>=2.0",     # runs the Lua-side handler suites in-process (scripts/run_lua_tests.py)
]

[project.urls]
Homepage = "https://github.com/mal0ware/Orpheus"
Repository = "https://github.com/mal0ware/Orpheus"
Issues = "https://github.com/mal0ware/Orpheus/issues"

[project.scripts]
orpheus-mcp = "orpheus_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orpheus_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/orpheus_mcp/bridge/lua" = "orpheus_mcp/bridge/lua"
"data" = "orpheus_mcp/data"

[tool.uv]
# Without this, the resolver picks numpy 2.5 and then backtracks numba all the way to
# 0.53.1 (the only version with no numpy upper bound) — a source-only release whose
# llvmlite 0.36 build requires Python <3.10 and fails on this machine's 3.12.
# Forcing a modern numba pulls a numpy both it and everything else agrees on.
constraint-dependencies = ["numba>=0.60", "llvmlite>=0.43"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
packages = ["orpheus_mcp"]
ignore_missing_imports = true
